--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
 <body>
     <h1>Student admission form</h1>
-    <a href="https://ramyagk14.github.io/student/student.php">click here </a>
+    <a href="http://localhost/student/student.php">click here </a>
 </body>
 </html>
